just before week8 review

--- a/views/adminViews/adminLogin.hbs
+++ b/views/adminViews/adminLogin.hbs
@@ -25,10 +25,10 @@
                         </div>
                         <div class="mb-3">
                             <input name="email" type="email" class="form-control" id="Username" aria-describedby="emailHelp"
-                                placeholder="Email">
+                                placeholder="Email" required>
                         </div>
                         <div class="mb-3">
-                            <input name="password" type="password" class="form-control" id="password" placeholder="Password">
+                            <input name="password" type="password" class="form-control" id="password" placeholder="Password" required>
                         </div>
                         {{#if invalidCredentials}}
                         <div><p class="fw-bold" style="color: red;">Please enter valid credentials</p></div>
