--- a/views/adminViews/adminDashboard.hbs
+++ b/views/adminViews/adminDashboard.hbs
@@ -17,7 +17,7 @@
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand fw-bold" href="#"><img src="images/logo-dark.png" alt="LFKart"></a>
+                <a class="navbar-brand fw-bold" href="/admin"><img src="images/logo-dark.png" alt="LFKart"></a>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">                  
                         <li class="nav-item fw-bold">
@@ -30,10 +30,10 @@
                             <a class="nav-link" aria-current="page" href="/admin/productManagement">Products</a>
                         </li>     
                         <li class="nav-item fw-bold">
-                            <a class="nav-link" aria-current="page" href="#">Orders</a>
+                            <a class="nav-link" aria-current="page" href="/admin/orders">Orders</a>
                         </li>
                         <li class="nav-item fw-bold">
-                            <a class="nav-link" aria-current="page" href="#">Sales Report</a>
+                            <a class="nav-link" aria-current="page" href="/admin/SalesReport">Sales Report</a>
                         </li>
                     </ul>
                     <form action="logout" method="post" class="d-flex">
