--- a/views/userViews/forgotPasswordPage.hbs
+++ b/views/userViews/forgotPasswordPage.hbs
@@ -146,119 +146,6 @@
     <p class="tbtn"> <i class="fa fa-angle-double-left"></i></p>
   </div>
 
-
-
-
-  <!-- Modal Login start -->
-  <div class="modal signUpContent fade" id="ModalLogin" tabindex="-1" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true"> &times; </button>
-          <h3 class="modal-title-site text-center"> Login to TSHOP </h3>
-        </div>
-        <div class="modal-body">
-          <div class="form-group login-username">
-            <div>
-              <input name="log" id="login-user" class="form-control input" size="20" placeholder="Enter Username"
-                type="text">
-            </div>
-          </div>
-          <div class="form-group login-password">
-            <div>
-              <input name="Password" id="login-password" class="form-control input" size="20" placeholder="Password"
-                type="password">
-            </div>
-          </div>
-          <div class="form-group">
-            <div>
-              <div class="checkbox login-remember">
-                <label>
-                  <input name="rememberme" value="forever" checked="checked" type="checkbox">
-                  Remember Me </label>
-              </div>
-            </div>
-          </div>
-          <div>
-            <div>
-              <input name="submit" class="btn  btn-block btn-lg btn-primary" value="LOGIN" type="submit">
-            </div>
-          </div>
-          <!--userForm-->
-
-        </div>
-        <div class="modal-footer">
-          <p class="text-center"> Not here before? <a data-toggle="modal" data-dismiss="modal" href="#ModalSignup"> Sign
-              Up. </a> <br>
-            <a href="forgot-password.html"> Lost your password? </a>
-          </p>
-        </div>
-      </div>
-      <!-- /.modal-content -->
-
-    </div>
-    <!-- /.modal-dialog -->
-
-  </div>
-  <!-- /.Modal Login -->
-
-  <!-- Modal Signup start -->
-  <div class="modal signUpContent fade" id="ModalSignup" tabindex="-1" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true"> &times; </button>
-          <h3 class="modal-title-site text-center"> REGISTER </h3>
-        </div>
-        <div class="modal-body">
-          <div class="control-group"><a class="fb_button btn  btn-block btn-lg " href="#"> SIGNUP WITH
-              FACEBOOK </a></div>
-          <h5 style="padding:10px 0 10px 0;" class="text-center"> OR </h5>
-
-          <div class="form-group reg-username">
-            <div>
-              <input name="login" class="form-control input" size="20" placeholder="Enter Username" type="text">
-            </div>
-          </div>
-          <div class="form-group reg-email">
-            <div>
-              <input name="reg" class="form-control input" size="20" placeholder="Enter Email" type="text">
-            </div>
-          </div>
-          <div class="form-group reg-password">
-            <div>
-              <input name="password" class="form-control input" size="20" placeholder="Password" type="password">
-            </div>
-          </div>
-          <div class="form-group">
-            <div>
-              <div class="checkbox login-remember">
-                <label>
-                  <input name="rememberme" id="rememberme" value="forever" checked="checked" type="checkbox">
-                  Remember Me </label>
-              </div>
-            </div>
-          </div>
-          <div>
-            <div>
-              <input name="submit" class="btn  btn-block btn-lg btn-primary" value="REGISTER" type="submit">
-            </div>
-          </div>
-          <!--userForm-->
-
-        </div>
-        <div class="modal-footer">
-          <p class="text-center"> Already member? <a data-toggle="modal" data-dismiss="modal" href="#ModalLogin">
-              Sign in </a></p>
-        </div>
-      </div>
-      <!-- /.modal-content -->
-
-    </div>
-    <!-- /.modal-dialog -->
-
-  </div>
-
   <!-- Fixed navbar start -->
   <div class="navbar navbar-tshop navbar-fixed-top megamenu" role="navigation">
     <div class="navbar-top">
@@ -803,20 +690,21 @@
           <div class="col-xs-12 col-sm-6">
             <h2 class="block-title-2"> Confirm Your OTP </h2>
 
-            <form action="/signup" method="POST" role="form" class="regForm">
+            <form action="/forgotOTP" method="POST" role="form" class="regForm">
               <div class="form-group">
-                <input id="OTP" type="hidden" class="form-control" value="{{currentOTP}}">
-              </div>
-              <div class="form-group">
-                <label>OTP</label>
-                <input name="OTP" title="Invalid OTP" type="tel" class="form-control" placeholder="Enter your OTP"
-                  required data-rule-equalTo="#OTP">
+                <label>Email Address</label>
+                <input name="email" title="Enter Valid Email Address" type="tel" class="form-control" placeholder="Enter email address"
+                  required>
               </div>
               <div class="form-group">
                 {{!-- <label>Time Left: </label> --}}
               </div>
-              <button type="submit" class="btn btn-primary"><i class="fa fa-user"></i> Create an account
-              </button>
+              {{#if forgotUserEmailDoesntExist}}
+              <div class="form-group">
+                <label style="color: red;">Email doesn't exist!</label>
+              </div>
+              {{/if}}             
+              <button type="submit" class="btn btn-primary"><i class="fa fa-user"></i> Send OTP</button>
             </form>
           </div>
         </div>
